[package]
name = "wordinfo"
version = "0.1.0"
edition = "2021"
authors = ["lxl66566 <lxl66566@gmail.com>"]
description = "A CLI tool to info words' meaning from web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
fake-ua = "0.1.0"
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["full"] }
tl = { version = "0.7.7", features = ["simd"] }
scraper = "0.17"
html5ever = "0.26.0"

[profile.release]
strip = true
lto = true
